Revert master+wip to master (6c14352f2ad3ae739a30d906764ac310dcbdf7e7)
Signed-off-by: Maciej Kurc <mkurc@antmicro.com>

--- a/.github/kokoro/continuous/weekly.cfg
+++ b/.github/kokoro/continuous/weekly.cfg
@@ -35,9 +35,22 @@ env_vars {
   value: "vtr-verilog-to-routing"
 }
 
+#Use default build configuration
+env_vars {
+  key: "VTR_CMAKE_PARAMS"
+  value: ""
+}
+
 env_vars {
   key: "VTR_TEST"
   value: "vtr_reg_weekly"
+}
+
+#Options for run_reg_test.pl
+# -show_failures: show tool failures in main log output
+env_vars {
+  key: "VTR_TEST_OPTIONS"
+  value: "-show_failures"
 }
 
 env_vars {
