--- a/.github/kokoro/continuous/strong.cfg
+++ b/.github/kokoro/continuous/strong.cfg
@@ -35,9 +35,22 @@ env_vars {
   value: "vtr-verilog-to-routing"
 }
 
+#Enable extra assertion checking for strong test
+env_vars {
+  key: "VTR_CMAKE_PARAMS"
+  value: "-DVTR_ASSERT_LEVEL=3"
+}
+
 env_vars {
   key: "VTR_TEST"
   value: "vtr_reg_strong"
+}
+
+#Options for run_reg_test.pl
+# -show_failures: show tool failures in main log output
+env_vars {
+  key: "VTR_TEST_OPTIONS"
+  value: "-show_failures"
 }
 
 env_vars {
