--- a/.github/kokoro/continuous/strong_sanitized.cfg
+++ b/.github/kokoro/continuous/strong_sanitized.cfg
@@ -2,8 +2,8 @@
 
 build_file: "vtr-verilog-to-routing/.github/kokoro/run-vtr.sh"
 
-# 72 hours
-timeout_mins: 4320
+# 1 hour
+timeout_mins: 60
 
 action {
   define_artifacts {
@@ -35,25 +35,28 @@ env_vars {
   value: "vtr-verilog-to-routing"
 }
 
-#Use default build configuration
+#VTR build configuration options:
+# -DVTR_ASSERT_LEVEL=3: Enable extra assertion checking
+# -DVTR_ENABLE_SANITIZE=ON: Enable compiler sanitizers (check for memory issues, undefined behaviour, etc.)
 env_vars {
   key: "VTR_CMAKE_PARAMS"
-  value: ""
+  value: "-DVTR_ASSERT_LEVEL=3 -DVTR_ENABLE_SANITIZE=ON"
 }
 
 env_vars {
   key: "VTR_TEST"
-  value: "vtr_reg_nightly"
+  value: "vtr_reg_strong"
 }
 
 #Options for run_reg_test.pl
 # -show_failures: show tool failures in main log output
+# -skip_qor: Skip QoR checks (since we expect run-time failures due to sanitizers)
 env_vars {
   key: "VTR_TEST_OPTIONS"
-  value: "-show_failures"
+  value: "-show_failures -skip_qor"
 }
 
 env_vars {
   key: "NUM_CORES"
-  value: "5"
+  value: "8"
 }
