--- a/.github/kokoro/presubmit/nightly.cfg
+++ b/.github/kokoro/presubmit/nightly.cfg
@@ -35,12 +35,25 @@ env_vars {
   value: "vtr-verilog-to-routing"
 }
 
+#Use default build configuration
+env_vars {
+  key: "VTR_CMAKE_PARAMS"
+  value: ""
+}
+
 env_vars {
   key: "VTR_TEST"
   value: "vtr_reg_nightly"
 }
 
+#Options for run_reg_test.pl
+# -show_failures: show tool failures in main log output
+env_vars {
+  key: "VTR_TEST_OPTIONS"
+  value: "-show_failures"
+}
+
 env_vars {
   key: "NUM_CORES"
-  value: "6"
+  value: "5"
 }
